error boundary and required on folder name and select

--- a/src/CircleButton/CircleButton.css
+++ b/src/CircleButton/CircleButton.css
@@ -1,6 +1,6 @@
 
 .NavCircleButton {
-  background-color: #cacaca;
+  background-color: #dedede;
   border-radius: 30px;
   border: 0;
   color: black;
