--- a/src/Note/Note.css
+++ b/src/Note/Note.css
@@ -1,8 +1,8 @@
 
 .Note {
   --note-height: 88px;
-  background-color: #010d1e;
-  color: #cacaca;
+  background-color: #0d346b;
+  color: #dedede;
   height: var(--note-height);
   margin-bottom: 8px;
   max-width: 380px;
@@ -12,7 +12,7 @@
 
 .Note__delete {
   --note-button-height: 32px;
-  background-color: #041a3a;
+  background-color: #0d346b;
   border: 0;
   color: #bdbcbc;
   float: right;
@@ -25,7 +25,7 @@
   width: calc(var(--note-height));
 }
 .Note__delete:hover {
-  background-color: #bd0909;
+  background-color: #ac3939;
   color: white;
   cursor: pointer;
   font-weight: bold;
@@ -39,12 +39,12 @@
   min-height: 24px;
 }
 .Note__title a {
-  color: #cacaca;
+  color: #dedede;
   display: block;
   text-decoration: none;
 }
 .Note__title a:hover {
-  color: #FFB72F;
+  color: rgb(238, 179, 70);
 }
 
 .Note__dates {
