--- a/src/NotePageNav/NotePageNav.css
+++ b/src/NotePageNav/NotePageNav.css
@@ -3,11 +3,14 @@
   margin: 45px 20px 25px auto
 }
 .NotePageNav__back-button:hover {
-  background-color: #FFB72F;
+  color: rgb(238, 179, 70);
 }
 
 .NotePageNav__folder-name {
-  color: #b5b3b3;
+  color: #c2c1c1;
+  font-weight: 600;
+  text-shadow: 2px 1px 2px rgb(117, 117, 117);
+
   font-family: var(--custom-font);
   font-size: 40px;
   height: 50vh;
